fixed spacing on mobile header

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -34,7 +34,7 @@ html {
 // TODO: Take buttons, inputs from _base.scss
 
 .branding-data {
-  padding:0;
+  padding: 2em 0;
 }
 .logo-img {
   position:absolute;
@@ -51,16 +51,16 @@ html {
 .site-name-slogan {
   font-size: 70%;
   height: 40px;
-  margin: 0 .6em 1.5em;
+  padding: 0;
   float: none;
 }
 .site-name {
   font-weight: bold;
-  margin: 1em 0 0;
+  margin: 0;
 }
 .site-slogan {
   font-weight: normal;
-  margin: 0 0 0 .2em;
+  margin: 0;
 }
 #breadcrumb {
   display:none;
