--- a/scss/incubator-prograde-alpha-default-narrow.scss
+++ b/scss/incubator-prograde-alpha-default-narrow.scss
@@ -8,7 +8,6 @@
 @import "mixin";
 
 .branding-data {
-  padding: 40px 0;
 }
 
 .site-name-slogan {
